# adgen

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.bak  README.md  config.yaml  pyproject.toml
adgen/: cli.py
adgen/abstractions/: audio.py  music.py  video.py
adgen/models/: ad.py
adgen/utils/: checkpoint.py  config.py  markdown.py
adgen/workflows/: ad_generation.py
examples/quiksilver-veo3/: README.md  ad_20250623_134901_complete.md  ad_20250623_134901_script.md  ad_20250623_134901_visual_plan.md
